base.css
html {
  height: 100vh;
}

body {
  background-attachment: fixed;
  background-image: url("./images/bkgr.png");
  background-position: bottom;
  background-repeat: no-repeat;
  background-size: cover;

  font-family: serif;
  font-size: large;
  margin: 0;
}

a {
  border-bottom: 2px solid white;
  font-family: sans-serif;
  text-decoration: none;
}
a:hover,
a:focus {
  border-bottom: 2px solid red;
}

.zbtn {
  background-color: #eee;
  border: 1px solid silver;
  border-radius: 0.5em;
  padding: 0 0.5em;
}

.code {
  background: rgba(170, 231, 255, 0.4);
  border-radius: 0.25rem;
  box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.2);
  border: 1px solid white;
  border-bottom-width: 2px;
  display: inline-block;
  font-family: monospace, serif;
  margin: auto;
  padding: 0 0.5rem;
}

main {
  height: 66vh;
  overflow: auto;
  padding: 0 1rem;
  text-align: center;
}
nav {
  color: white;
}

footer {
  bottom: 0;
  font-size: 0.8em;
  line-height: 1.8;
  position: fixed;
  text-align: center;
  width: 100%;
}
footer .stack {
  color: black;
  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
  font-weight: 800;
  margin: 1rem;
  text-shadow: 1px 2px 3px white;
}
footer .stack::before {
  content: "🎸";
  font-size: 1.3rem;
}
footer pre {
  background: rgba(255, 255, 255, 0.6);
  border-radius: 0.25rem;
  margin: 0;
}

